styles/style.css
body {
    font-family: 'Varela Round', sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

h1 {
    font-size: 40px;
    color: white;
}

nav {
    width: 100%;
    height: 80px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #000C66;
    border-bottom: 4px solid #050A30;
}

footer {
    width: 100%;
    height: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #7EC8E3;
    border-top: 4px solid #050A30;
}

.board-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.board {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    min-height: 250px;
    min-width: 250px;
    max-height: 400px;
    max-width: 400px;
    width: 50vw;
    height: 50vw;
    border: 3px solid #050A30;
    grid-row-gap: 2px;
    grid-column-gap: 2px;
    background-color: #050a30;
}

.tile {
    font-size: 64px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #75E6DA;
}

.tile:hover:not(.disabled) {
    background-color: #1C9B8E;
    cursor: pointer;
}

.game-ctrl-btn {
    height: 40px;
    width: 150px;
}

.game-info {
    font-size: 28px;
    margin-bottom: 22px;
}

.show-winner {
    color: green;
}

.show-winner::after {
    content: ' <<';
}

.show-winner::before {
    content: '>> ';
}

.show-tie {
    color: rgb(167, 154, 42);
}

.show-tie::after {
    content: ' <<';
}

.show-tie::before {
    content: '>> ';
}

.menu-wrapper {
    position: absolute;
    top: 80px;
    left: 0;
    width: 100vw;
    height: calc(100vh - 130px);
    background-color: rgb(5, 10, 48, 0.7);
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.game-menu {
    max-height: 400px;
    max-width: 400px;
    min-width: 270px;
    min-height: 380px;
    width: 30vw;
    height: 30vw;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-direction: column;
    background-color: #75E6DA;
    border: 4px solid #050a30;
    margin-top: 40px;
}

.game-menu p {
    font-size: 30px;
    margin-bottom: 10px;
}

.game-menu div {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.game-menu button {
    margin-bottom: 10px;
}

.selected-player {
    transform: scale(1.05);
    border: 3px solid #050a30;
}

#start {
    margin-top: 34px;
    margin-bottom: 30px;
}

.hidden {
    display: none;
}

.buttons {
    margin-top: 40px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: row;
    width: 100%;
}

@media (max-width: 510px) {
    .tile {
        font-size: 46px;
    }

    .game-menu {
        height: max-content;
    }

    .buttons button {
        width: 100px;
        height: 54px;
    }
}

